--- a/Assignment2/Pages/Index.cshtml
+++ b/Assignment2/Pages/Index.cshtml
@@ -3,8 +3,38 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="border rounded p-3 mb-1 border border-primary">
+    <a asp-page="/Privacy" asp-route-Name="Todd" asp-route-Age="4">
+        Happy birthday Todd!
+    </a>
+</div>
+<div class="border rounded p-3 mb-1 border border-primary">
+    <h3>GET</h3>
+    <form method="get" asp-page="/Privacy">
+        Name
+        <input id="getName" name="Name"/>
+        Age
+        <input id="getAge" name="Age"/>
+        <button type="submit">Submit</button>
+    </form>
+</div>
+<div class="border rounded p-3 mb-1 border border-primary">
+    <h3>CROSS POST</h3>
+    <form method="post" asp-page="/Privacy">
+        Name
+        <input id="getName" name="Name" />
+        Age
+        <input id="getAge" name="Age" />
+        <button type="submit">Submit</button>
+    </form>
+</div>
+<div class="border rounded p-3 mb-1 border border-primary">
+    <h3>POSTBACK</h3>
+    <form method="post">
+        Name
+        <input id="getName" name="Name" />
+        Age
+        <input id="getAge" name="Age" />
+        <button type="submit">Submit</button>
+    </form>
 </div>
