--- a/Assignment2/Pages/Privacy.cshtml
+++ b/Assignment2/Pages/Privacy.cshtml
@@ -15,9 +15,6 @@ else
 {
     for (int i = 1; i <= Model.PersonModel.Age; i++)
     {
-        <h1>Happy @i birthday @Model.PersonModel.Name!</h1>
+        <div>Happy @i birthday @Model.PersonModel.Name!</div>
     }
 }
-<h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
